Using stix data

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </ul>
   </div>
 
-  <div class="b-example-divider"></div>
+  <div class="vertical-divider"></div>
 
   <div class="main-window">
     <div id="window-threatbox" class="window-hidden">
@@ -318,6 +318,19 @@
     </div>
     <div id="window-threatactorlibrary" class="window-hidden">
       <h1 class="label-threatactorlibrary"></h1>
+
+      <div id="actorlibrary">
+        <div>
+          <h3>APT1</h3>
+          <p>Test</p>
+          <hr/>
+        </div>
+        <div>
+          <h3>APT2</h3>
+          <p>Test</p>
+          <hr/>
+        </div>
+      </div>
     </div>
     <div id="window-settings" class="window-hidden">
       <h1 class="label-settings"></h1>
