--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="OllieJC">
-    <title>Threat Box Demo Site</title>
+    <title>Threat Box Assessment Tool</title>
 
 
 
