Add meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="tbat (threat box assessment tool) is a tool for analysing different threat actors and their tactics, techniques and procedures.">
     <meta name="author" content="OllieJC">
     <title>Threat Box Assessment Tool</title>
 
