Improved mobile CSS and GitHub menu link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Threat Box Assessment Tool</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main-202108151709.css" rel="stylesheet">
+    <link href="css/main-202108151726.css" rel="stylesheet">
   </head>
   <body>
 
@@ -42,7 +42,10 @@
   </symbol>
   <symbol id="bi-pen-fill" viewBox="0 0 16 16">
     <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001z"/>
-  </svg>
+  </symbol>
+  <symbol id="github" viewBox="0 0 16 16">
+    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+  </symbol>
 </svg>
 
 <main>
@@ -84,6 +87,13 @@
             <span class="label-settings"></span>
           </a>
         </li-->
+        <hr>
+        <li class="nav-item">
+          <a href="https://github.com/OllieJC/tbat" target="_blank" rel="noopener noreferrer" class="nav-link" aria-current="page">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#github"/></svg>
+            <span class="label-githubrepo"></span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
@@ -383,6 +393,6 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/js-yaml.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main-202108151720.js"></script>
   </body>
 </html>
